html-project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: html-deployment
  namespace: html-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: html-app

  template:
    metadata:
      labels:
        app: html-app

    spec:
      containers:
      - name: html-container
        image: vijaydevops769/html-app:17
        imagePullPolicy: Always

        ports:
        - containerPort: 80
