html-project/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: html-service
  namespace: html-app

spec:
  type: ClusterIP

  selector:
    app: html-app

  ports:
  - port: 80
    targetPort: 80
