html-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: html-ingress
  namespace: html-app

spec:
  rules:
  - host: myapp.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: html-service

            port:
              number: 80
